--- a/template.html
+++ b/template.html
@@ -6,9 +6,8 @@
     <title>${title}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="${keywords}" content="${content}" />
-    <style>
-      ${css}
-    </style>
+    <link rel="stylesheet" type="text/css" href="${baseCssPath}" /> 
+    <link rel="stylesheet" type="text/css" href="${highlightCssPath}" /> 
   </head>
   <body>
     <div id="write">
