--- a/template.html
+++ b/template.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="${highlightCssPath}" /> 
   </head>
   <body>
+    <div id="header"></div>
+    <div id="sidebar"></div>
+    <div id="toc"></div>
     <div id="write">
       ${body}
     </div>
