--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="header"></div>
-    <div id="sidebar"></div>
+    <div id="sidebar">${treeHtml}</div>
     <div id="toc"></div>
     <div id="write">
       ${body}
