--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://at.alicdn.com/t/font_1374216_2yvlhmjt4nt.css"
     />
-    <script type="text/javascript" src="#{jsPath}\my.js"></script>
+    <script type="text/javascript" src="#{jsPath}/my.js"></script>
   </head>
   <body>
     <!-- 回到顶部的按钮 -->
