--- a/template.html
+++ b/template.html
@@ -6,22 +6,19 @@
     <title>#{title}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="#{keywords}" content="#{content}" />
-    <link rel="stylesheet" type="text/css" href="#{cssPath}/github.css" />
-    <link rel="stylesheet" type="text/css" href="#{cssPath}/highlight.css" />
+    <link rel="stylesheet" type="text/css" href="/css/github.css" />
+    <link rel="stylesheet" type="text/css" href="/css/highlight.css" />
     <link
       rel="stylesheet"
-      href="https://at.alicdn.com/t/font_1374216_2yvlhmjt4nt.css"
+      href="https://at.alicdn.com/t/font_1374216_5867iv410a9.css"
     />
-    <script type="text/javascript" src="#{jsPath}/my.js"></script>
+    <script type="text/javascript" src="js/my.js"></script>
 
   </head>
   <body>
     <!-- 回到顶部的按钮 -->
     <a class="top" href="#header">
-      <img
-        src="https://g.csdnimg.cn/side-toolbar/1.4/images/fanhuidingbucopy.png"
-        alt=""
-      />
+        <i class="iconfont icon-up"></i>
     </a>
     <div id="header"></div>
     <div id="sidebar">
